      "'struct mm_struct' has no member named 'mmap_sem'".

  [ Andreas Beckmann ]
  * Backport get_user_pages_remote, vga_tryget, smp_read_barrier_depends,
    drm_driver_has_gem_free_object, drm_display_mode_has_vrefresh,
    drm_driver_master_set_has_int_return_type and drm_gem_object_put_unlocked
    changes from 455.23.04 to fix kernel module build for Linux 5.9.
  * Update lintian overrides.

 -- Andreas Beckmann <anbe@debian.org>  Sun, 11 Oct 2020 23:49:36 +0200

nvidia-graphics-drivers (418.152.00-2) UNRELEASED; urgency=medium

  * Backport nv_vmalloc and nv_mmap_* (mmap_{sem=>lock}) changes from 450.57
    to fix kernel module build for Linux 5.8.

 -- Andreas Beckmann <anbe@debian.org>  Tue, 01 Sep 2020 00:48:01 +0200

nvidia-graphics-drivers (418.152.00-1) buster; urgency=medium

  * New upstream Tesla release 418.152.00 (2020-06-24).
    * Fixed CVE-2020-5963, CVE-2020-5967.  (Closes: #963766)
      https://nvidia.custhelp.com/app/answers/detail/a_id/5031

  [ Andreas Beckmann ]
  * Use amd64 Tesla releases for buster.
  * Refresh patches.
  * Update lintian overrides.
  * Upload to buster.

 -- Andreas Beckmann <anbe@debian.org>  Mon, 29 Jun 2020 18:01:24 +0200

nvidia-graphics-drivers (418.126.02-1) UNRELEASED; urgency=medium

  * New upstream Tesla release 418.126.02 (2020-02-28).
    - Added support for the following GPU: Quadro T2000 with Max-Q Design.

  [ Andreas Beckmann ]
  * Import drmP.patch from Fedora and port it from 390.xx to 418.xx to fix
    kernel module build for Linux 5.5.  (Closes: #951091)
  * Backport nv_ioremap_nocache changes from 440.64 and nv_proc_ops_t and
    nv_timeval changes from 440.82 to fix kernel module build for Linux 5.6.
    (Closes: #956458)
  * Fix #includes in conftest.sh to fix kernel module build for Linux 5.7,
    thanks to Jiri Palecek.  (Closes: #960735)

 -- Andreas Beckmann <anbe@debian.org>  Sat, 14 Mar 2020 23:08:06 +0100

nvidia-graphics-drivers (418.116.00-1) UNRELEASED; urgency=medium
