@@ -32,6 +32,7 @@ nvidia-graphics-drivers (418.165.02-1) UNRELEASED; urgency=medium
     drm_driver_has_gem_free_object, drm_display_mode_has_vrefresh,
     drm_driver_master_set_has_int_return_type and drm_gem_object_put_unlocked
     changes from 455.23.04 to fix kernel module build for Linux 5.9.
+  * Refresh patches.
   * Update lintian overrides.
 
  -- Andreas Beckmann <anbe@debian.org>  Sun, 11 Oct 2020 23:49:36 +0200
